# quant_strategy_lab

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  medium_article.md
notebooks/: strategy_sandbox.ipynb
src/mcp_quant/: __init__.py  data.py  llm_agent.py  mcp_client.py  mcp_server.py  strategies.py  validation.py
src/mcp_quant/web/: app.py
src/mcp_quant/web/static/: app.jsx  styles.css
tests/: test_data.py  test_integration.py  test_llm_agent.py  test_manual_client.py  test_mcp_client.py  test_mcp_server.py  test_strategies.py  test_web_api.py
