[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant_strategy_lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "mcp",
    "fastapi",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_quant"]
